# photography

./: .gitignore  .gitmodules  .stylish-haskell.yaml  CNAME  Dockerfile  LICENSE.md  README.md  general.css  index.html  photography.cabal  robots.txt  site.hs  stack.yaml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: deploy.yml  validate.yml
Helpers/: Contexts.hs  Metadata.hs  Photos.hs
provider/: 404.html  general.css
provider/templates/: default.html  photo.html  sidebar.html
src/: site.hs
src/Helpers/: Contexts.hs  Metadata.hs  Photos.hs
templates/: collection.html  default.html  photo.html  photos.json  sidebar.html  sitemap.xml
