name:               photography
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , binary == 0.8.*
                  , bytestring == 0.10.*
                  , containers == 0.5.*
                  , filepath == 1.4.*
                  , time == 1.8.*
                  , text == 1.2.*
                  , regex-base == 0.93.*
                  , regex == 1.0.*
                  , hakyll == 4.12.*
                  , hakyll-images == 0.4.*
                  , hsexif == 0.6.*
  ghc-options:      -threaded
  default-language: Haskell2010
