name:               photography
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  other-modules:    Helpers.Contexts
                  , Helpers.Photos
  build-depends:    base == 4.*
                  , binary == 0.8.*
                  , bytestring == 0.10.*
                  , containers == 0.6.*
                  , filepath == 1.4.*
                  , time == 1.9.*
                  , text == 1.2.*
                  , regex-base == 0.94.*
                  , regex == 1.1.*
                  , hakyll == 4.13.*
                  , hakyll-images == 0.4.*
                  , hsexif == 0.6.*
  ghc-options:      -O3 -threaded -Wall
  default-language: Haskell2010
